@@ -31,6 +31,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 
 3.0.2.0 (not yet released)
 - [lang] Italian update, thanks to Luca and fantu
+- bug #2107583 [GUI] Leading newline truncated, thanks to Isart Montane
 
 3.0.1.0 (2008-10-22)
 - bug #2134126 [GUI] SQL error after sorting a subset 
